update content (incomplete)

--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -31,13 +31,23 @@ There are 3 primitives available in SDL, the:
 
 <span id="Semaphore"></span>
 === Semaphore ===
-~-Semaphore functions are used to determine whether a data structure is available to be allocated to a thread, and then potentially permits multiple threads access to the data.  (Often the individual data structures are protected directly by a mutex  Semaphores count - up from 0 or down from a preset starting point.  In both cases the critical value is 0.  For a semaphore counting up, 0 indicates that there is nothing available to be used/worked on.  For a semaphore counting down, 0 indicates that something has run out.  Exactly how to use or interpret a semaphore depends upon the application.-~
+~-Semaphores count.  They count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  For a semaphore counting up, 0 indicates that there is nothing available to be used/worked on.  For a semaphore counting down, 0 indicates that something has run out.  Exactly how to use or interpret a semaphore depends upon the application.  Semaphore functions are used to determine whether a data structure is available to be allocated to a thread, and then potentially permits multiple threads access to the data (if the count is >1).  (Often the individual data structures are protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.)-~
 
- ~-''Analogy - counting down:''  This is similar to (count of multiple check stands)-~
+ ~-''Analogy - counting down:''  This is similar to waiting in a single line for access to any one of a number of check stands, like you might do at some "big box" stores (eg: Fry's Electronics).  There are so many check stands that you can't see which are open for sure, more than one check stand might become available simultaneously, and it would be embarrassing and awkward to leave the line only to find that the space you thought was available isn't and there's nowhere to go.  In real life this can be resolved with lights above each check stand to indicate when one is available.  The eyes and brains of the customers provide the remainder of the problem-solving.  In programming terms, you resolve this with mutexes and a semaphore.
+*A ''semaphore'' is used in lieu of lights to provide a count of available check stands that can be accessed by all the threads (customers) simultaneously.
+*A ''mutex'' protects each data structure (check stand) from being accessed by more than one thread (customer) at a time.
+ When the store opens in the morning, the semaphore count indicates the total number of check stands (let's say 8).  It remains unchanged until a customer enters the line and checks the semaphore to see if there is an open check stand.  Since there are 8 open, and the customer (thread) only needs 1, the customer leaves the line and picks a check stand to use.  When the customer enters the check stand (s)he locks the mutex for that stand (in real life this could be equivalent to just taking up the space there).  When the mutex is locked and the stand is in use the semaphore is decremented to 7.  The next customer to enter the line will see that there are 7 available check stands and can repeat the process.  When the customer has completed his/her transaction and unlocks the mutex the semaphore count is then incremented (raised) by 1 to indicate that the stand is now available for another customer.  This process repeats for each customer wishing to check out as long as there is at least 1 available check stand.  If the store gets busy and the check stands fill up with more customers waiting in line, then the semaphore becomes very handy.  Customers in excess of 8 continue to wait in line until the semaphore indicates a positive number.  Then, that number of customers can leave the line and enter an available check stand.  This allows for the possibility that more than one check stand may become simultaneously available, allowing more than one customer to leave the line and head for a check stand at the same time, and moving the line along faster.  The individual mutexes at each check stand prevent multiple customers from leaving the line and trying to process their transactions through the same check stand.  Whoever locks the mutex first gets to use that check stand and the other customer (thread) must find the other available check stand(s) before completing their transactions.  At the end of the day when all the customers are gone and all the check stands are empty the semaphore will again read 8.-~
+
+
+ ~-''Analogy - counting up:''  This is similar to a car wash using a counter display to show the number of recently washed cars waiting for the drying team to dry them.
+*The cars are what are waiting to be worked on (data structures available for processing).
+*The Dryers (threads) are the people that need to work on the cars (data) next.
+*The semaphore keeps track of how many cars are waiting.
+ Under normal circumstances the Dryers dry cars as they come out of the car wash.  In most cases the semaphore count would not exceed 1.  However, if something slowed down the drying process (''ex'': the car wash became very busy and temporarily ran out of dry towels; a number of small cars followed a number of big cars;  the drying crew was smaller or slower than usual...) it is possible that a backlog of cars to be dried could form.  In that case the semaphore (a big digital display perhaps) would continue to increment (count up) as cars exited the car wash, and would decrement (count down) as cars were taken for drying.
 
 <span id="CondVar"></span>
 === Condition Variable ===
-~-Condition Variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change in status.-~
+~-Condition Variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change.-~
 
  ~-''Analogy:'' This is similar to -~
 
