--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -31,7 +31,9 @@ There are 3 primitives available in SDL, the:
 
 <span id="Semaphore"></span>
 === Semaphore ===
-~-Semaphores count.  They count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  For a semaphore counting up, 0 indicates that there is nothing available to be used/worked on.  For a semaphore counting down, 0 indicates that something has run out.  Exactly how to use or interpret a semaphore depends upon the application.  Semaphore functions are used to determine whether a data structure is available to be allocated to a thread, and then potentially permits multiple threads access to the data (if the count is >1).  (Often the individual data structures are protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.)-~
+~-Semaphores count.  They count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  For a semaphore counting up, 0 indicates that there is nothing available to be used/worked on.  For a semaphore counting down, 0 indicates that something has run out.  Exactly how to use or interpret a semaphore depends upon the application.  Semaphore functions are used to determine whether a data structure is available to be allocated to a thread, and then potentially permits multiple threads access to the data (if the count is >1).  (Often the individual data structures are protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.)
+
+Note that a semaphore can behave much like a mutex if the max count is set to 1.  Like a mutex, a semaphore limited to 1 can only allow 1 thread past its "check point" in the process.  This effectively removes the possibility of another thread using the same data simultaneously.-~
 
  ~-''Analogy - counting down:''  This is similar to waiting in a single line for access to any one of a number of check stands, like you might do at some "big box" stores (eg: Fry's Electronics).  There are so many check stands that you can't see which are open for sure, more than one check stand might become available simultaneously, and it would be embarrassing and awkward to leave the line only to find that the space you thought was available isn't and there's nowhere to go.  In real life this can be resolved with lights above each check stand to indicate when one is available.  The eyes and brains of the customers provide the remainder of the problem-solving.  In programming terms, you resolve this with mutexes and a semaphore.
 *A ''semaphore'' is used in lieu of lights to provide a count of available check stands that can be accessed by all the threads (customers) simultaneously.
@@ -43,13 +45,13 @@ There are 3 primitives available in SDL, the:
 *The cars are what are waiting to be worked on (data structures available for processing).
 *The Dryers (threads) are the people that need to work on the cars (data) next.
 *The semaphore keeps track of how many cars are waiting.
- Under normal circumstances the Dryers dry cars as they come out of the car wash.  In most cases the semaphore count would not exceed 1.  However, if something slowed down the drying process (''ex'': the car wash became very busy and temporarily ran out of dry towels; a number of small cars followed a number of big cars;  the drying crew was smaller or slower than usual...) it is possible that a backlog of cars to be dried could form.  In that case the semaphore (a big digital display perhaps) would continue to increment (count up) as cars exited the car wash, and would decrement (count down) as cars were taken for drying.
+ Under normal circumstances the Dryers dry cars as they come out of the car wash.  In most cases the semaphore count would not exceed 1.  However, if something slowed down the drying process (''ex'': the car wash became very busy and temporarily ran out of dry towels; a number of small cars followed a number of big cars;  the drying crew was smaller or slower than usual...) it is possible that a backlog of cars to be dried could form.  In that case the semaphore (a big digital display perhaps) would continue to increment (count up) as cars exited the car wash, and would decrement (count down) as cars were taken for drying.-~
 
 <span id="CondVar"></span>
 === Condition Variable ===
-~-Condition Variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change.-~
+~-Condition Variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change.  They do not protect directly like mutexes do (and semaphores can if their max count is 1).  Instead they coordinate by monitoring for change and alerting when change occurs.-~
 
- ~-''Analogy:'' This is similar to -~
+ ~-''Analogy:'' This is similar to getting an alert when you have received a text message.  The alert does not tell you who it is from or what it says, just that a message has been received.  You have to then look for the details of the message yourself.  In this analogy the ''condition variable'' is the alert telling you that there has been a change in the number of messages in your inbox (the data structure being monitored).  You are like a thread waiting for information in the inbox.  It is useless to keep getting out your phone and checking if there is nothing there.  Having an alert tell you as soon as something has arrived saves you time and energy and ensures that you know the moment the message becomes available instead of eventually when you get around to checking again.  Similarly, condition variables help to keep threads busy when there is something to do but idle when there isn't.-~
 
 '''''Here is an analogy that utilizes all three primitives together:'''''
  ~-Imagine a buffet-style restaurant.  You, the customer, are one of the ''threads'' waiting to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (''a thread'').  (S)He asks for the number of individuals in your party and checks to see if there is an available table.  (It wouldn't do to send you through the buffet line only to have you find nowhere to sit.)  <<Color2(green,It seems that there would be a data structure or something that would record the number in your party and transfer that information to the Buffet Manager for his/her decision-making purpose.  What form would that likely take in this analogy?  Not a semaphore right?  Just a data structure - "party size" - that is somehow attached to your group?  Could that info be passed directly to the Buffet Manager by the Host(ess) or would the Buffet Manager need to ask you again?  Would it be data associated with you/your party that would be independently queried by each restaurant worker that needed the information?)>>
