--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -20,6 +20,7 @@ There are 3 primitives available in SDL, the:
 *[[#Semaphore|Semaphore]]
 *[[#CondVar|Condition Variable]]
 
+
 <span id="Mutex"></span>
 === Mutex ===
 ~-If you understand the phrase "mutually exclusive" then you already know the basic idea of a mutex.  Mutex, or __mut__ual __ex__clusion, functions are used to protect data structures in multi-threaded processes.  By coordinating multiple threads using or calling the same data source a mutex prevents interference between threads that may cause instability in the program.  Threads take turns locking the mutex (accessing the resource) one at a time.  Waiting threads are queued up ^based on the mutex algorithm? / based on the OS?^ and take their turn locking (accessing) the shared resource as each previous thread unlocks (releases) the mutex.  Only the thread that has locked the mutex can access the data structure to read or write to it.-~
@@ -28,6 +29,7 @@ There are 3 primitives available in SDL, the:
   ~-*The restroom is like the ''data structure''.-~<br/>
   ~-*An individual needing to use the restroom is like a ''thread''.-~<br/>
  ~-If someone (''a thread'') wants to use the bathroom (''data structure'') they must request permission from the clerk (''mutex''), who only has 1 key to give out.  The person who currently possesses the key (''locks the mutex'') has access to use the restroom and everyone else must wait.  Once the key is returned to the clerk anyone waiting for the restroom may then attempt to get the key from the clerk.  Eventually each waiting person will get their turn, but the restroom cannot be used by more than one person at a time in this way.  (Please disregard the 'human factor' in this analogy, which allows individuals to break rules.  Thankfully computers are much less prone to do so.)-~  ;)
+
 
 <span id="Semaphore"></span>
 === Semaphore ===
@@ -47,21 +49,23 @@ Note that a semaphore can behave much like a mutex if the max count is set to 1.
 *The semaphore keeps track of how many cars are waiting.
  Under normal circumstances the Dryers dry cars as they come out of the car wash.  In most cases the semaphore count would not exceed 1.  However, if something slowed down the drying process (''ex'': the car wash became very busy and temporarily ran out of dry towels; a number of small cars followed a number of big cars;  the drying crew was smaller or slower than usual...) it is possible that a backlog of cars to be dried could form.  In that case the semaphore (a big digital display perhaps) would continue to increment (count up) as cars exited the car wash, and would decrement (count down) as cars were taken for drying.-~
 
+
 <span id="CondVar"></span>
 === Condition Variable ===
-~-Condition Variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change.  They do not protect directly like mutexes do (and semaphores can if their max count is 1).  Instead they coordinate by monitoring for change and alerting when change occurs.-~
+~-Condition variables in SDL are used to monitor the status of a data structure or structures and alert waiting functions when there has been a change.  (The "variable" that they monitor is the "condition" of another variable.)  They do not protect directly like mutexes do (and semaphores can if their max count is 1).  Instead they coordinate threads by monitoring for changes and alerting when change occurs.  This saves time and resources by preventing threads from trying to work on data that isn't available and from constantly checking data that isn't changing.-~
 
  ~-''Analogy:'' This is similar to getting an alert when you have received a text message.  The alert does not tell you who it is from or what it says, just that a message has been received.  You have to then look for the details of the message yourself.  In this analogy the ''condition variable'' is the alert telling you that there has been a change in the number of messages in your inbox (the data structure being monitored).  You are like a thread waiting for information in the inbox.  It is useless to keep getting out your phone and checking if there is nothing there.  Having an alert tell you as soon as something has arrived saves you time and energy and ensures that you know the moment the message becomes available instead of eventually when you get around to checking again.  Similarly, condition variables help to keep threads busy when there is something to do but idle when there isn't.-~
 
+
 '''''Here is an analogy that utilizes all three primitives together:'''''
- ~-Imagine a buffet-style restaurant.  You, the customer, are one of the ''threads'' waiting to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (''a thread'').  (S)He asks for the number of individuals in your party and checks to see if there is an available table.  (It wouldn't do to send you through the buffet line only to have you find nowhere to sit.)  <<Color2(green,It seems that there would be a data structure or something that would record the number in your party and transfer that information to the Buffet Manager for his/her decision-making purpose.  What form would that likely take in this analogy?  Not a semaphore right?  Just a data structure - "party size" - that is somehow attached to your group?  Could that info be passed directly to the Buffet Manager by the Host(ess) or would the Buffet Manager need to ask you again?  Would it be data associated with you/your party that would be independently queried by each restaurant worker that needed the information?)>>
+ ~-Imagine a buffet-style restaurant.  You, the customer, (one of the ''threads'') are waiting to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (a ''thread'').  (S)He asks for the number of individuals in your party and checks to see if there is an available table.  (It wouldn't do to send you through the buffet line only to have you find nowhere to sit.)  <<Color2(green,It seems that there would be a data structure or something that would record the number in your party and transfer that information to the Buffet Manager for his/her decision-making purpose.  What form would that likely take in this analogy?  Not a semaphore right?  Just a data structure - "party size" - that is somehow attached to your group?  Could that info be passed directly to the Buffet Manager by the Host(ess) or would the Buffet Manager need to ask you again?  Would it be data associated with you/your party that would be independently queried by each restaurant worker that needed the information?)>>
 *''Semaphores'' track the number of available tables of each size.
-*They are decremented (reduced) from the maximum number of tables of each size as patrons are seated.  
-*They are increment(increased) up to the maximum as patrons leave and the tables are reset for the next guests.
+:They are decremented (reduced) from the maximum number of tables of each size as patrons are seated.  
+:They are incremented (increased) up to the maximum number as patrons leave and the tables are cleaned for the next guests.
 *A ''mutex'' protects the count from being changed by more than one restaurant worker at a time.  (ex: If the Host(ess) is changing the number then a Busser cannot be simultaneously changing the number.)
 *A ''condition variable'' monitors the ''semaphores'' for changes.  When a ''semaphore'' count changes the ''condition variable'' alerts the Host(ess) to check the counts to see if the next Party can be seated.
- The Host(ess) checks the appropriate semaphore for the table size needed for your party.  If the number is 0 you are requested to wait.  If the number is __>__1 you are allowed to enter the buffet line.  
-*In addition, the Host(ess) ^simultaneously / also?^ locks the ''mutex'' and decrements (reduces the count by 1) the ''semaphore'' for that size table, so (s)he knows it is taken and does not accidentally assign it to another party while you are sitting there.  If a Busser has the ''mutex'' locked at that time the Host(ess) must wait to update the count until the Busser is done and unlocks the ''mutex''
+ The Host(ess) checks the appropriate semaphore for the table size needed for your party.  If the number is 0 you are requested to wait.  If the number is __>__1 you are allowed to enter the buffet line.  <<Color2(green,Can a semaphore count be protected by a mutex?  How is that handled - if the 
+*In addition, the Host(ess) also locks the ''mutex'' and decrements (reduces the count by 1) the ''semaphore'' for that size table, so (s)he knows it is taken and does not accidentally assign it to another party while you are sitting there.
  Once a table is available you are ushered through to the next phase.  The next person you meet is the Buffet Manager (another ''thread'').  (You'll have to be a little flexible with the analogy at this point.)  One of the Buffet Manager's jobs is to ensure that no one passes through the buffet line unless a plate, cup, spoon, fork, and knife (the hardware) is available for them.  (We're not going to address the actual food here, but it could work similarly to the hardware.)  Unfortunately (s)he is not able to see the stacks of hardware at the buffet from where (s)he greets the patrons.  In addition, there must be enough available to send each entire party through together.
 *There are 3 categories of people who interact directly with the hardware -
 *Patrons who take hardware to use, 
